@@ -96,8 +96,9 @@ public:
 	void AddToRecent(wxString file);					// Adds file name to list of recently opened files
 	bool CanSave();										// Return true if the file can be saved in its current format
 
-	int GetScriptInfoAsInt(const wxString key);
-	wxString GetScriptInfo(const wxString key);						// Returns the value in a [Script Info] key.
+	void GetResolution(int &w,int &h);								// Get resolution
+	int GetScriptInfoAsInt(const wxString key);						// Returns the value in a [Script Info] key as int.
+	wxString GetScriptInfo(const wxString key);						// Returns the value in a [Script Info] key as string.
 	void SetScriptInfo(const wxString key,const wxString value);	// Sets the value of a [Script Info] key. Adds it if it doesn't exist.
 	void AddComment(const wxString comment);						// Adds a ";" comment under [Script Info].
 	int AddLine(wxString data,wxString group,int lasttime,bool &IsSSA,wxString *outGroup=NULL);
